After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 735630 - utils: Fix the RDF type of text and HTML files
utils: Fix the RDF type of text and HTML files
Status: RESOLVED FIXED
Product: gnome-documents
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME documents maintainer(s)
GNOME documents maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-08-28 19:03 UTC by Bastien Nocera
Modified: 2014-09-02 08:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
utils: Fix the RDF type of text and HTML files (873 bytes, patch)
2014-08-28 19:03 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-08-28 19:03:04 UTC
.
Comment 1 Bastien Nocera 2014-08-28 19:03:12 UTC
Created attachment 284737 [details] [review]
utils: Fix the RDF type of text and HTML files

The nfo:HtmlDocument is for HTML files, not text files.
Comment 2 Cosimo Cecchi 2014-08-28 19:07:00 UTC
Review of attachment 284737 [details] [review]:

Looks good
Comment 3 Bastien Nocera 2014-09-02 08:44:21 UTC
Attachment 284737 [details] pushed as 6bae1a3 - utils: Fix the RDF type of text and HTML files