utils: Fix the RDF type of text and HTML files

The nfo:HtmlDocument is for HTML files, not text files.

https://bugzilla.gnome.org/show_bug.cgi?id=735630